--- a/medi-check/src/Components/Doctor/PatientList/index.css
+++ b/medi-check/src/Components/Doctor/PatientList/index.css
@@ -74,6 +74,7 @@
 
 .arrow {
   width: 10px;
+  filter: var(--arrowfilter);
 }
 
 .sort-buttons {
